--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
-  "name": "semantic-movement",
-	"displayName": "Semantic movement",
-	"description": "",
-	"version": "0.0.1",
+	"name": "semantic-movement",
+	"displayName": "Semantic Movement",
+	"description": "Move around document leveraging symbol table",
+	"version": "0.1.0",
+	"publisher": "pokey",
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/pokey/semantic-movement.git"
+	},
 	"engines": {
 		"vscode": "^1.52.0"
 	},
@@ -10,14 +16,39 @@
 		"Other"
 	],
 	"activationEvents": [
-        "onCommand:semantic-movement.helloWorld"
+		"onCommand:semantic-movement.jumpToContainingClass",
+		"onCommand:semantic-movement.jumpToContainingFunction",
+		"onCommand:semantic-movement.jumpToContainingMember",
+		"onCommand:semantic-movement.selectContainingClass",
+		"onCommand:semantic-movement.selectContainingFunction",
+		"onCommand:semantic-movement.selectContainingMember"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
 		"commands": [
 			{
-				"command": "semantic-movement.helloWorld",
-				"title": "Hello World"
+				"command": "semantic-movement.jumpToContainingMember",
+				"title": "Semantic Movement: Jump to Containing Member"
+			},
+			{
+				"command": "semantic-movement.selectContainingMember",
+				"title": "Semantic Movement: Select Containing Member"
+			},
+			{
+				"command": "semantic-movement.jumpToContainingFunction",
+				"title": "Semantic Movement: Jump to Containing Function"
+			},
+			{
+				"command": "semantic-movement.selectContainingFunction",
+				"title": "Semantic Movement: Select Containing Function"
+			},
+			{
+				"command": "semantic-movement.jumpToContainingClass",
+				"title": "Semantic Movement: Jump to Containing Class"
+			},
+			{
+				"command": "semantic-movement.selectContainingClass",
+				"title": "Semantic Movement: Select Containing Class"
 			}
 		]
 	},
@@ -30,13 +61,13 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.52.0",
 		"@types/glob": "^7.1.3",
 		"@types/mocha": "^8.0.4",
 		"@types/node": "^12.11.7",
-		"eslint": "^7.15.0",
+		"@types/vscode": "^1.52.0",
 		"@typescript-eslint/eslint-plugin": "^4.9.0",
 		"@typescript-eslint/parser": "^4.9.0",
+		"eslint": "^7.15.0",
 		"glob": "^7.1.6",
 		"mocha": "^8.1.3",
 		"typescript": "^4.1.2",
